Update of some body elements
Update of some prefabs for the actor figure

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ com.unity.textmeshpro
 
 # Mac general files
 .DS_Store
+CaveSoSe2025/Assets/Samples/CAVE/1.1.1/CAVE Tools/Prefab/ActorFigure.blend
